--- a/nuevo-cliente.html
+++ b/nuevo-cliente.html
@@ -67,6 +67,7 @@
         </main>
     </div>
     <script src="js/nuevocliente.js"></script>
+    <script src="js/funciones.js"></script>
 </body>
 
 </html>
